fixed mobile gap on sticky tab

--- a/UI/Web/src/app/series-detail/series-detail.component.scss
+++ b/UI/Web/src/app/series-detail/series-detail.component.scss
@@ -29,7 +29,7 @@
 
 .nav-tabs.fixed {
   position: fixed;
-  top: 116px;
+  top: 114px;
   z-index: 100;
   background-color: var(--bs-body-bg);
   width: 100%;
